updated html page and .env route for database

--- a/public/landing.html
+++ b/public/landing.html
@@ -27,7 +27,7 @@
                             <label for="logPass">Password:</label>
                             <input type="password" class="form-control" id="logPass" placeholder="Password">
                         </div>
-                        <button type="submit" class="btn btn-default">Enter Downstream</button>
+                        <button type="submit" id="loginBtn" class="btn btn-default">Enter Downstream</button>
                     </form>
                 </div>
             </div>
@@ -55,12 +55,14 @@
                             <label for="confirmPass">Confirm Password:</label>
                             <input type="password" class="form-control" id="confirmPass" placeholder="Confirm Password">
                         </div>
-                        <button type="submit" class="btn btn-default">Login</button>
+                        <button type="submit" id="createBtn" class="btn btn-default">Create User</button>
                     </form>
                 </div>
             </div>
         </div>
-
+        <div class="brandStatement text-center">
+            <h1>Downstream The Last Group Document and Messenger App You'll Use</h1>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="js/landing.js"></script>
