dashboard page is functional, slightly skinny with info

--- a/public/landing.html
+++ b/public/landing.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>DownStream</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
                             <label for="logPass">Password:</label>
                             <input type="password" class="form-control" id="logPass" placeholder="Password">
                         </div>
-                        <button type="submit" id="loginBtn" class="btn btn-default">Enter Downstream</button>
+                        <button type="submit" id="loginBtn" class="btn btn-default">Enter DownStream</button>
                     </form>
                 </div>
             </div>
@@ -61,7 +61,7 @@
             </div>
         </div>
         <div class="brandStatement text-center">
-            <h1>Downstream The Last Group Document and Messenger App You'll Use</h1>
+            <h1><Strong>DownStream</Strong> The Last Group Document and Messenger App You'll Use</h1>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
