--- a/public/user-dashboard.html
+++ b/public/user-dashboard.html
@@ -4,10 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Dashboard</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container text-center">
+        <div class="navBar">
+            <div class="row">
+                <div class="col-md-4">
+                    <h3 id="dStream">DownStream</h3>
+                </div>
+                <div class="col-md-4">
+                    <h4 id="streams">Streams</h4>
+                </div>
+                <div class="col-md-4">
+                    <h4 id="rafts">Rafts</h4>
+                </div>
+            </div>
+        </div>
+        <div class="welcomeBar">
+            <h2 class="welcomeLine">Welcome Back {Name Here}</h2>
+        </div>
+        <div class="row accountRow">
+            <div class="col-md-4">
+                <h3 id="updateUser">Update Account Info</h3>
+            </div>
+            <div class="col-md-4">
+                <h3 id="streamsPage">Total Streams: {num}</h3>
+            </div>
+            <div class="col-md-4">
+                <h3 id="raftsPage">Total Rafts: {num}</h3>
+            </div>
+        </div>
 
     </div>
 </body>
