--- a/public/test.html
+++ b/public/test.html
@@ -2,17 +2,66 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>S3 Upload Example</title>
+	<meta charset="UTF-8">
+	<title>S3 Upload Example</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.css">
 </head>
 
 <body>
-    <!-- the 'enctype' attribute is crucial here! -->
-    <form id="uploadForm" enctype="multipart/form-data">
+	<div class="container">
+		<header>
+			<h1>Uploading Test</h1>
+		</header>
+
+		<div>
+			<form id="upload-widget" method="post" action="api/s3/upload" class="dropzone">
+				<div class="fallback">
+					<input name="file" type="file" />
+				</div>
+			</form>
+		</div>
+	</div>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.js"></script>
+	<script type="text/javascript">
+		Dropzone.options.uploadWidget = {
+			paramName: 'file',
+			maxFilesize: 2, // MB
+			maxFiles: 1,
+			dictDefaultMessage: 'Drag an image here to upload, or click to select one',
+			headers: {
+				'x-csrf-token': document.querySelector('meta[name=csrf-token]').getAttributeNode('content').value,
+			},
+			acceptedFiles: 'image/*',
+			init: function () {
+				this.on('success', function (file, resp) {
+					console.log(file);
+					console.log(resp);
+				});
+				this.on('thumbnail', function (file) {
+					if (file.accepted !== false) {
+						if (file.width < 640 || file.height < 480) {
+							file.rejectDimensions();
+						} else {
+							file.acceptDimensions();
+						}
+					}
+				});
+			},
+			accept: function (file, done) {
+				file.acceptDimensions = done;
+				file.rejectDimensions = function () {
+					done('The image must be at least 640 x 480px');
+				};
+			}
+		};
+	</script>
+
+	<!-- <form id="uploadForm" enctype="multipart/form-data" class="dropzone">
         <label for="description">File Description:</label>
         <input type="text" name="description" placeholder="File Description" id="description" />
 
-        <!-- the name attribute here ('upload') must match the key following 'req.files' in your back-end route! -->
         <label for="upload">Upload File:</label>
         <input type="file" name="upload" id="upload" />
 
@@ -21,6 +70,6 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="/js/s3.js"></script>
+    <script src="/js/s3.js"></script> -->
 
 </body>
