updated links, added some testing styling

--- a/public/user-dashboard.html
+++ b/public/user-dashboard.html
@@ -33,6 +33,7 @@
             </div>
             <div class="col-md-4">
                 <h3 id="streamsPage">Total Streams: {num}</h3>
+                <p> hello world, i want to win <span class="rotating-number">10</span> times</p>
             </div>
             <div class="col-md-4">
                 <h3 id="raftsPage">Total Rafts: {num}</h3>
