updated routing and moved video to background

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <div class="welcomeBar">
-            <h2 class="welcomeLine">Welcome Back {{user.first_name}} {{user.last_name}}</h2>
+            <h2 class="welcomeLine"></h2>
         </div>
         <div class="row accountRow">
             <div class="col-md-4">
