--- a/public/streams.html
+++ b/public/streams.html
@@ -11,6 +11,7 @@
     <link rel='icon' href='img/placeholderFav.png' type='image/x-icon'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.5.1/min/dropzone.min.js"></script>
+    <script src="https://kit.fontawesome.com/d7b6144c64.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/loader.css">
     <title>DownStream</title>
@@ -37,36 +38,14 @@
         <div class="row loaderRow">
             <div class="col-md-4">
                 <div class="row">
-                    <button class="createBtn">
+                    <button type="button" class="btn btn-primary" data-toggle="modal"
+                        data-target="#exampleModalScrollable" id="createBtn">
                         <h3>Create Stream</h3>
                     </button>
                 </div>
                 <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy">
-                    <ul>
-                        <li class="streamId">
-                            <h4>Stream 1</h4>
-                            <p>message details. .... blah. blah. blah. blah</p>
-                        </li>
-                        <li class="streamId">
-                            <h4>Stream 2</h4>
-                            <p>message details. .... blah. blah. blah. blah</p>
-                        </li>
-                        <li class="streamId">
-                            <h4>Stream 3</h4>
-                            <p>message details. .... blah. blah. blah. blah</p>
-                        </li>
-                        <li class="streamId">
-                            <h4>Stream 4</h4>
-                            <p>message details. .... blah. blah. blah. blah</p>
-                        </li>
-                        <li class="streamId">
-                            <h4>stream 5</h4>
-                            <p>message details. .... blah. blah. blah. blah</p>
-                        </li>
-                        <li class="streamId">
-                            <h4>stream 6</h4>
-                            <p>message details. .... blah. blah. blah. blah</p>
-                        </li>
+                    <ul id="indStreams">
+                        
                     </ul>
                 </div>
             </div>
@@ -75,15 +54,11 @@
                     <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy">
                         <div id="createStream" class="row">
                             <form id="createStreamForm">
-                                <span><input id="streamUser" type="text" placeholder="Stream Users"></span>
+                                <span><input id="streamUser" type="text"></span>
                                 <button class="submit" class="newStream">Create</button>
                             </form>
                             <div id="dynamicLIs">
                                 <ul id="eachUser">
-                                    <li>
-                                        <!-- {{stream}} -->
-
-                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -91,8 +66,50 @@
                 </div>
             </div>
         </div>
+        <div class="modal fade" id="exampleModalScrollable" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalScrollableTitle">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eaque, sed aspernatur nulla
+                            nemo adipisci quam rerum reprehenderit quibusdam, suscipit iure enim tempore incidunt sit
+                            nesciunt perspiciatis rem pariatur beatae?
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eaque, sed aspernatur nulla
+                            nemo adipisci quam rerum reprehenderit quibusdam, suscipit iure enim tempore incidunt sit
+                            nesciunt perspiciatis rem pariatur beatae?
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eaque, sed aspernatur nulla
+                            nemo adipisci quam rerum reprehenderit quibusdam, suscipit iure enim tempore incidunt sit
+                            nesciunt perspiciatis rem pariatur beatae?
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eaque, sed aspernatur nulla
+                            nemo adipisci quam rerum reprehenderit quibusdam, suscipit iure enim tempore incidunt sit
+                            nesciunt perspiciatis rem pariatur beatae?
+                        </p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="js/rafts.js"></script>
     <script src="js/userStream.js"></script>
     <script src="js/streams.js"></script>
