--- a/public/streams.html
+++ b/public/streams.html
@@ -37,15 +37,9 @@
         </div>
         <div class="row loaderRow">
             <div class="col-md-4">
-                <div class="row">
-                    <button type="button" class="btn btn-primary" data-toggle="modal"
-                        data-target="#exampleModalScrollable" id="createBtn">
-                        <h3>Create Stream</h3>
-                    </button>
-                </div>
                 <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy">
                     <ul id="indStreams">
-                        
+
                     </ul>
                 </div>
             </div>
@@ -54,8 +48,13 @@
                     <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy">
                         <div id="createStream" class="row">
                             <form id="createStreamForm">
-                                <span><input id="streamUser" type="text"></span>
-                                <button class="submit" class="newStream">Create</button>
+                                <div class="col-md-6">
+                                    <div id="streamUser">  
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <button class="submit" id="newStream">Create</button>
+                                </div>
                             </form>
                             <div id="dynamicLIs">
                                 <ul id="eachUser">
@@ -71,34 +70,47 @@
             <div class="modal-dialog modal-dialog-scrollable" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalScrollableTitle">Modal title</h5>
+                        <h5 class="modal-title" id="exampleModalScrollableTitle"></h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eaque, sed aspernatur nulla
-                            nemo adipisci quam rerum reprehenderit quibusdam, suscipit iure enim tempore incidunt sit
-                            nesciunt perspiciatis rem pariatur beatae?
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eaque, sed aspernatur nulla
-                            nemo adipisci quam rerum reprehenderit quibusdam, suscipit iure enim tempore incidunt sit
-                            nesciunt perspiciatis rem pariatur beatae?
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eaque, sed aspernatur nulla
-                            nemo adipisci quam rerum reprehenderit quibusdam, suscipit iure enim tempore incidunt sit
-                            nesciunt perspiciatis rem pariatur beatae?
-                        </p>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime eaque, sed aspernatur nulla
-                            nemo adipisci quam rerum reprehenderit quibusdam, suscipit iure enim tempore incidunt sit
-                            nesciunt perspiciatis rem pariatur beatae?
-                        </p>
+                        <ul>
+                            <li>
+                                message data will loop through these li's
+                            </li>
+                            <li>
+                                message data will loop through these li's
+                            </li>
+                            <li>
+                                message data will loop through these li's
+                            </li>
+                            <li>
+                                message data will loop through these li's
+                            </li>
+                            <li>
+                                message data will loop through these li's
+                            </li>
+                            <li>
+                                message data will loop through these li's
+                            </li>
+                            <li>
+                                message data will loop through these li's
+                            </li>
+                            <li>
+                                message data will loop through these li's
+                            </li>
+                            <li>
+                                message data will loop through these li's
+                            </li>
+                            <li>
+                                message data will loop through these li's
+                            </li>
+                        </ul>
                     </div>
                     <div class="modal-footer">
+                        <input type="text" id="messageDetails">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         <button type="button" class="btn btn-primary">Save changes</button>
                     </div>
