--- a/public/streams.html
+++ b/public/streams.html
@@ -112,7 +112,7 @@
                     <div class="modal-footer">
                         <input type="text" id="messageDetails">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
+                        <button type="button" id="streamBtn" class="btn btn-primary">Send Stream</button>
                     </div>
                 </div>
             </div>
