data for of loops appending li's to the page

--- a/public/streams.html
+++ b/public/streams.html
@@ -76,37 +76,8 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <ul>
-                            <li>
-                                message data will loop through these li's
-                            </li>
-                            <li>
-                                message data will loop through these li's
-                            </li>
-                            <li>
-                                message data will loop through these li's
-                            </li>
-                            <li>
-                                message data will loop through these li's
-                            </li>
-                            <li>
-                                message data will loop through these li's
-                            </li>
-                            <li>
-                                message data will loop through these li's
-                            </li>
-                            <li>
-                                message data will loop through these li's
-                            </li>
-                            <li>
-                                message data will loop through these li's
-                            </li>
-                            <li>
-                                message data will loop through these li's
-                            </li>
-                            <li>
-                                message data will loop through these li's
-                            </li>
+                        <ul id="messageLis">
+                           
                         </ul>
                     </div>
                     <div class="modal-footer">
